# lamco-rdp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SOP.md  build.rs  example-config.toml
.claude/: SESSION-CHECKPOINT.md
.github/workflows/: appimage.yml  ci.yml
benches/: color_conversion.rs  damage_detection.rs  network_throughput.rs  video_encoding.rs
bundled-crates/lamco-clipboard-core/: Cargo.toml
bundled-crates/lamco-clipboard-core/src/: formats.rs  image.rs  loop_detector.rs  sanitize.rs  transfer.rs
bundled-crates/lamco-rdp-clipboard/: Cargo.toml
data/: io.lamco.rdp-server.desktop  io.lamco.rdp-server.metainfo.xml
docs/: ARCHITECTURE.md  LOGGING.md
packaging/: README.md  SHA256SUMS-1.0.0.txt  appimage.yml  create-vendor-tarball.sh  io.lamco.rdp-server.desktop  io.lamco.rdp-server.metainfo.xml  io.lamco.rdp-server.yml
packaging/aur/: PKGBUILD
packaging/dbus/: io.lamco.RdpServer.System.conf  io.lamco.RdpServer.service
packaging/debian/: changelog  control  copyright  lamco-rdp-server.docs  lamco-rdp-server.lintian-overrides  rules  salsa-ci.yml  watch
packaging/debian/patches/: 0001-fix-cros-libva-compat-with-libva-2.22.patch  0002-fix-systemd-service-hardening.patch  series
packaging/debian/source/: lintian-overrides
packaging/flatpak/: io.lamco.rdp-server.dbus-service  io.lamco.rdp-server.metainfo.xml  io.lamco.rdp-server.yml
packaging/obs/: lamco-rdp-server.spec
packaging/pam/: lamco-rdp-server  lamco-rdp-server.fedora
packaging/polkit/: io.lamco.RdpServer.policy
packaging/rpmfusion/: lamco-rdp-server.spec
packaging/scripts/: copyright-cache.json  generate-debian-copyright.py  generate-rpm-provides.py  regenerate-packaging-metadata.sh
packaging/snap/: snapcraft.yaml
packaging/systemd/: lamco-rdp-server-system.service  lamco-rdp-server.service
patches/: README.md  cros-libva-vp9-default.patch
src/: lib.rs  main.rs
src/audio/: capture.rs  factory.rs  handler.rs  mod.rs  pipeline.rs
src/audio/codecs/: adpcm.rs  g711.rs  mod.rs  opus.rs
src/capabilities/: diagnostics.rs  fallback.rs  manager.rs  mod.rs  state.rs
src/capabilities/probes/: display.rs  encoding.rs  input.rs  mod.rs  network.rs  rendering.rs  storage.rs
src/clipboard/: cooperation.rs  error.rs  fuse.rs  ironrdp_backend.rs  klipper.rs  klipper_monitor.rs  manager.rs  mod.rs  provider.rs  strategy.rs  sync.rs
src/clipboard/providers/: data_control.rs  mod.rs  mutter.rs  portal.rs  wl_clipboard.rs
src/compositor/: capabilities.rs  mod.rs  portal_caps.rs  probing.rs  profiles.rs
src/config/: mod.rs  types.rs
src/cursor/: predictor.rs  strategy.rs
src/damage/: mod.rs
src/dbus/: events.rs  manager.rs  mod.rs
src/egfx/: avc444_encoder.rs  color_convert.rs  color_space.rs  encoder.rs  h264_level.rs  handler.rs  mod.rs  video_handler.rs  yuv444_packing.rs
src/egfx/hardware/: error.rs  factory.rs  mod.rs  stats.rs
src/egfx/hardware/nvenc/: mod.rs
src/egfx/hardware/vaapi/: mod.rs
src/egfx/openh264_compat/: encoder_core.rs  ffi_types.rs  loader.rs  mod.rs
src/gui/: app.rs  capabilities.rs  certificates.rs  dbus_client.rs  file_ops.rs  hardware.rs  main.rs  message.rs  mod.rs  server_connection.rs  server_process.rs  state.rs  theme.rs  validation.rs
src/gui/tabs/: advanced.rs  audio.rs  clipboard.rs  egfx.rs  input.rs  mod.rs  performance.rs  security.rs  server.rs  status.rs  video.rs
src/gui/widgets/: mod.rs
src/health/: compositor_watcher.rs  mod.rs  monitor.rs
src/multimon/: layout.rs  manager.rs  mod.rs
src/mutter/: clipboard.rs  mod.rs  pipewire_helper.rs  remote_desktop.rs  screencast.rs  session_manager.rs
src/performance/: adaptive_fps.rs  latency_governor.rs  mod.rs
src/runtime/: diagnostics.rs  errors.rs  metrics.rs  mod.rs
src/security/: auth.rs  certificates.rs  mod.rs  tls.rs
src/server/: display_handler.rs  egfx_sender.rs  event_multiplexer.rs  gfx_factory.rs  graphics_drain.rs  input_handler.rs  mod.rs  multiplexer_loop.rs
src/services/: clipboard_manager.rs  mod.rs  rdp_capabilities.rs  registry.rs  service.rs  translation.rs  wayland_features.rs
src/session/: credentials.rs  flatpak_secret.rs  mod.rs  secret_service.rs  strategy.rs  token_manager.rs  tpm_store.rs
src/session/factory/: mod.rs  portal.rs  quirks.rs  state.rs
src/session/strategies/: eis_common.rs  mutter_direct.rs  portal_generic.rs  portal_token.rs  screencast_only.rs  selector.rs
src/session/strategies/libei/: mod.rs
src/session/strategies/wlr_direct/: keyboard.rs  mod.rs  pointer.rs
src/telemetry/: diagnostics.rs  errors.rs  mod.rs
