[package]
name = "lamco-clipboard-core"
version = "0.5.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lamco-admin/lamco-rdp"
homepage = "https://lamco.ai"
authors = ["Lamco <contact@lamco.ai>"]
description = "Protocol-agnostic clipboard utilities - format conversion, loop detection, transfer engine"
documentation = "https://docs.rs/lamco-clipboard-core"
keywords = ["clipboard", "format", "conversion", "rdp", "sync"]
categories = ["encoding", "data-structures"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
image = ["dep:image", "dep:bytes"]

[dependencies]
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"

# Optional dependencies for image conversion
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
bytes = { version = "1.5", optional = true }

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
elided_lifetimes_in_paths = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
allow_attributes = "deny"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "deny"
doc_markdown = "allow"
unreadable_literal = "allow"
similar_names = "allow"
return_self_not_must_use = "allow"
missing_panics_doc = "allow"
struct_field_names = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
as_conversions = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
format_push_string = "allow"
match_same_arms = "allow"
unused_self = "allow"
redundant_closure = "allow"

[dev-dependencies]
